data/derived/comb/progs/unify/prog2960.ml.out
Characters 42-50:
  let stringOfList f l = List.map (sepConcat(";", l));;
                                            ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
